# logbook

./: .gitignore  README.md  README.md.orig
code/: zstd_vector.cpp
code/20171213/: matrix_approx_svd.py
code/20171218/: guess_radius.py
code/20180106/: index.html
code/20180120/: CMakeLists.txt  content.tex  main.tex
code/20180208/: word2vec.py
code/20180212/: bank_logic_regression.py  logistic_regression.py
code/20180310/: kill_lighttpd.py  lighttpd-phabricator.conf  phab_setup.md  restart.sh
code/20180311/: buildbot_inst.md  master.cfg
code/20180425/: setup.py  spam.c  spam_caller.py
code/20180528/: pool_example.py
code/20180918/: draw_chn_char.py
code/cifar_10_tf/: README.md  cifar_cnn.py  cifar_reader.py  dump_tensor_vals.py  dump_tensor_vals_in_npz.py  gen_model_io_patterns.py  go.sh  restore_by_ckpt.py  save_cifar_img.py  show_cifar_img.py
code/cv_stitch/: CMakeLists.txt  imshow_main.cpp
code/dct_coef/: dct_coef.py
code/example_tf/: concat.py  lrn_ex.py  readme.md  split.py  unstack.py
code/font_image/: draw_distored_chn_char.py
code/gflags/: CMakeLists.txt  main.cpp
code/housing_sales_opendata/: base_xml_parser.py  datetime_utils.py  import_zip.py
code/housing_sales_opendata/test/: unittest_base_xml_parser.py  unittest_datetime_utils.py
code/kdtree/: kdtree.py
code/mhook/: CMakeLists.txt  ClangOverrides.txt  memo.txt
code/mhook/cmake/: FindLibDL.cmake
code/mhook/gtest/: CMakeLists.txt
code/mhook/src/: CMakeLists.txt  chook.c  chook.h  cpphook.cpp  mbook.cpp  mbook.h  util_cpp.cpp  util_cpp.h
code/mhook/tests/: CMakeLists.txt
code/mhook/tests/trivial_leak/: CMakeLists.txt  trivial_leak.c
code/mhook/tests/trivial_leak_cpp/: CMakeLists.txt  trivial_leak.cpp
code/mhook/tools/: .gdbinit  build-clang-debug.sh  build-clang-release.sh  build.sh  run.sh
code/mhook/unit_tests/: CMakeLists.txt
code/mhook/unit_tests/mbook/: CMakeLists.txt  mbook_unittest.cpp
code/mnist-lstm/: dump_one_pic.py  gru.py  lstm.py  my_lstm_cell.py
code/np/: save_load.py
code/opencv/cv_imread_py/: main.py
code/opencv/cv_stitch/: CMakeLists.txt  stitch_main.cpp
code/opencv/webcam/: show_images.py
code/opencv_webcam/: save_webcam_images.py
code/pcl/viewer/: cloud_view.cpp
code/plot/: draw_cos_2cos.py  draw_fft.py  draw_fft_pi_digits.py  draw_fourier.py  draw_tanh_sigmoid.py
code/web/: adv_html_parser.py
code/web/data/: motor.html
random_notes/: char-rnn-bp.dia  char-rnn.dia  dl_res.txt  gentoo_docker.txt  gru.dia  housing.md  nn.txt  toolbox.md
